# docs/openapi.yaml
@@ -396,7 +396,7 @@ paths:
           schema: { type: string }
         - in: query
           name: size
-          schema: { type: integer, minimum: 32, maximum: 512, default: 256 }
+          schema: { type: integer, minimum: 32, maximum: 2048, default: 256 }
       responses:
         '200':
           description: Thumbnail JPEG
@@ -556,13 +556,12 @@ paths:
     get:
       tags: [Search]
       summary: Buscar archivos/directorios
-      description: "Rol requerido: viewer/editor/admin"
+      description: "Rol requerido: viewer/editor/admin. Se requiere al menos uno de: q, type o ext"
       security:
         - BearerAuth: []
       parameters:
         - in: query
           name: q
-          required: true
           schema: { type: string }
         - in: query
           name: path
